Modernize web/service layer for Spring 6 / Java 21
Co-Authored-By: Devanshi Gupta <devanshi.gupta@cognition.ai>