@@ -9,7 +9,10 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.OptionalInt;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -19,7 +22,7 @@ import java.util.stream.Stream;
 public class TopicService {
 
 
-    private List<Topic> topics = new ArrayList<>(Arrays.asList(
+    private final List<Topic> topics = new ArrayList<>(List.of(
             new Topic("spring", "Spring Framework", "Spring Framework Description"),
             new Topic("java", "Core Java", "Java Description"),
             new Topic("javascript", "javascript Framework", "javascript Framework Description")
@@ -107,8 +110,7 @@ public class TopicService {
      * @return
      */
     public String returnAllTopicIDWithStringSlicing() {
-        List<String> topicIds = topics.stream().map(topic -> topic.getId()).collect(Collectors.toList());
-        return String.join(":", topicIds);
+        return topics.stream().map(Topic::getId).collect(Collectors.joining(":"));
     }
 
 
@@ -147,13 +149,10 @@ public class TopicService {
      */
     public String findIdHavingCharacter() {
         Pattern pattern = Pattern.compile(".*g.*");
-        Object[] topicIdObjectList = topics.stream().map(topic -> topic.getId()).collect(Collectors.toList()).toArray();
-
-        String[] topicIdList = Arrays.stream(topicIdObjectList).toArray(String[]::new);
-
-        return Stream.of(topicIdList)
+        return topics.stream()
+                .map(Topic::getId)
                 .filter(pattern.asPredicate())
-                .collect(Collectors.toList())
+                .toList()
                 .toString();
     }
 
@@ -167,12 +166,11 @@ public class TopicService {
      */
     public String findAllFilesInPathAndSort() {
         try (Stream<Path> stream = Files.list(Paths.get(""))) {
-            String joined = stream
+            return stream
                     .map(String::valueOf)
                     .filter(path -> !path.startsWith("."))
                     .sorted()
                     .collect(Collectors.joining("; "));
-            return joined;
         } catch (IOException e) {
             return " Error in IO";
         }
@@ -187,11 +185,10 @@ public class TopicService {
         int maxDepth = 25;
         try (Stream<Path> stream = Files.find(start, maxDepth, (path, attr) ->
                 String.valueOf(path).startsWith("grad"))) {
-            String joined = stream
+            return stream
                     .sorted()
                     .map(String::valueOf)
                     .collect(Collectors.joining("; "));
-            return joined;
         } catch (IOException e) {
             return " IO exception ";
         }
@@ -206,12 +203,11 @@ public class TopicService {
         Path start = Paths.get("");
         int maxDepth = 5;
         try (Stream<Path> stream = Files.walk(start, maxDepth)) {
-            String joined = stream
+            return stream
                     .map(String::valueOf)
                     .filter(path -> path.startsWith("grad"))
                     .sorted()
                     .collect(Collectors.joining("; "));
-            return joined;
         } catch (IOException e) {
             return " IO exception ";
         }
@@ -226,12 +222,11 @@ public class TopicService {
         Path path = Paths.get("temp.txt");
         System.out.println();
         try (BufferedReader reader = Files.newBufferedReader(path)) {
-            String lines = reader
+            return reader
                     .lines()
-                    .filter(line->line.contains("print"))
-                    .map(line->line.substring("print".length()))
+                    .filter(line -> line.contains("print"))
+                    .map(line -> line.substring("print".length()))
                     .collect(Collectors.joining(","));
-            return  lines;
         } catch (IOException e) {
             return " IO exception ";
         }
